--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && npx esbuild server/index.ts --platform=node --bundle --external:@babel/preset-typescript --external:lightningcss --format=esm --outdir=dist",
+
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -76,13 +77,14 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
     "@replit/vite-plugin-cartographer": "^0.3.0",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^24.4.0",
     "@types/passport": "^1.0.16",
@@ -90,16 +92,16 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.26.0",
+    "esbuild": "^0.19.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^7.1.5"
+    "typescript": "^5.6.3",
+    "vite": "^6.3.6"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
